myapp/mynginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mynginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mynginx
  template:
    metadata:
      labels:
        app: mynginx
    spec:
      containers:
        - name: mynginx
          image: mynginx:1.5
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mynginx-service
spec:
  selector:
    app: mynginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
