myapp/redoc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redoc-service
spec:
  selector:
    app: redoc
  ports:
    # - protocol: TCP
    #   port: 80
    #   targetPort: 80
    #   name: http
    - nodePort: 31067
      port: 80
      protocol: TCP
      targetPort: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redoc
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: redoc
  template:
    metadata:
      labels:
        app: redoc
    spec:
      containers:
        - name: redoc
          image: myredoc:1.0.13
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
