myapp/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite /redoc/(.*) /$2 break;
      rewrite /dashboard/(.*) /$1 break;
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   location / {
    #     try_files $uri $uri/ /index.html;
    #   }
    # nginx.ingress.kubernetes.io/x-forwarded-prefix: "true"
  labels:
    app: dashboard
spec:
  rules:
    - http:
        paths:
          - path: /dashboard
            backend:
              serviceName: dashboard-service
              servicePort: 80
          - path: /redoc
            backend:
              serviceName: redoc-service
              servicePort: 80
          - path: /meow
            backend:
              serviceName: meow-service
              servicePort: 80
          - path: /mynginx
            backend:
              serviceName: mynginx-service
              servicePort: 80
          # - path: /swagger
          #   backend:
          #     serviceName: swagger-service
          #     servicePort: 80
